# NanoBasicRust

./: Cargo.toml  parser_ojbect_structure.excalidraw  readme.md
.github/workflows/: deploy.yml
app/: Cargo.toml
app/src/: main.rs
doc/: dev_notes.md
nanobasic/: Cargo.toml
nanobasic/src/: interpreter.rs  lib.rs  parser.rs  parser_tests.rs  tokenizer.rs
nanobasic/src/parser/: expressions.rs  statements.rs  tokenizer.rs  tokenizer_tests.rs
nanobasic/src/parser/statements/: if_statement.rs  let_statment.rs  print_statment.rs
nanobasic/tests/: test_nano.rs
src/: main.rs  parser.rs  tokenizer.rs
src/parser/: expressions.rs  mod.rs  statement_if.rs  statement_let.rs  statement_print.rs  statements.rs
src/parser/statements/: if_statement.rs  let_statment.rs  print_statment.rs
web/: Cargo.toml  index.html
web/src/: app.rs  main.rs
