[package]
name = "cs_rust"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"]}
lazy_static = "1.5.0"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
color-backtrace = "0.6"


[profile.dev]
opt-level = 0
debug = 2
