[workspace]
members = [
    "nanobasic",
    "app"
]
default-members = ["app"]

resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"

[profile.dev]
opt-level = 0
debug = 2
